# class_copilot

./: .gitignore  PROJECT_CONTEXT_SUMMARY.md  README.md  UPDATE1.md  pyproject.toml  start_class_copilot.ps1  test_timer.py  update_class_copilot.ps1
class_copilot/: __init__.py  __main__.py  bootstrap.py  config.py  db.py  logging.py  network_patch.py
class_copilot/api/: schemas.py
class_copilot/api/http/: error_handlers.py  routes.py
class_copilot/api/ws/: __init__.py  connection.py  handlers.py
class_copilot/application/: chat.py  question.py  session.py  settings.py
class_copilot/domain/: exceptions.py  ports.py
class_copilot/infrastructure/: crypto.py  network.py
class_copilot/infrastructure/asr/: __init__.py  qwen_omni.py
class_copilot/infrastructure/audio/: capture.py  encoder.py  monitor.py
class_copilot/infrastructure/llm/: openai_compatible.py
class_copilot/infrastructure/persistence/: orm.py  repositories.py
class_copilot/services/: asr_service.py  doubao_asr_service.py  qwen_omni_asr_service.py  session_manager.py
docs/260519-plan/: contract.md  plan-backend.md  plan-frontend.md  plan.md
docs/260519-plan/reference/: 上下文缓存.md  全模态.md  实时语音识别.md  文本生成.md  模型列表.md  模型调用计费.md  深度思考.md  语音识别.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: audio.ts  client.ts  courses.ts  sessions.ts  settings.ts  status.ts  types.ts
tests/: conftest.py  test_application.py  test_http_api.py  test_ws.py
tests/fakes/: asr.py  llm.py
(+51 files in other folders)
