[project]
name = "class-copilot"
version = "0.1.0"
description = "Local lecture assistant backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy[asyncio]",
    "aiosqlite",
    "sounddevice",
    "soundcard",
    "lameenc",
    "numpy",
    "dashscope",
    "openai",
    "websockets",
    "pydantic",
    "pydantic-settings",
    "loguru",
    "cryptography",
]

[dependency-groups]
dev = [
    "httpx",
    "pytest",
    "pytest-asyncio",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["class_copilot"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
